...
    super.initState();
    getVisitsByDate();
  }

  @override
  Widget build( BuildContext context ) => Scaffold(
    key: const Key('visits_page'),
    floatingActionButton: FloatingActionButton(
      key: const Key('create_visit_fab'),
      backgroundColor: ColorsApp.backgroundColor,
      onPressed: () {
        Navigator.push(
          context,
          SlidePageRoute( page: CreateVisitPage() )
        ).then((bCreated) {
...
