...
  }

  @override
  Widget build( BuildContext context ) {

    return Scaffold(
      key: const Key('create_visit_page'),
      appBar: AppBar(
        title: PoppinsText(
          sText: TextsUtil.of(context)!.getText( 'new_visit.title' ),
          dFontSize: ResponsiveApp.dSize( 20.0 ),
          colorText: ColorsApp.secondaryColor,
          fontWeight: FontWeight.w500
...
        children: [
          SizedBox( height: ResponsiveApp.dHeight( 40.0 ) ),
          ClientsMultiSelect(),
          DateVisit(),
          SizedBox( height: ResponsiveApp.dHeight( 40.0 ) ),
          MainButton(
            key: const Key('create_visit_button'),
            sLabel: TextsUtil.of(context)!.getText( 'new_visit.create_button' ),
            onPressed: createVisit
          )
        ]
      )
    );
...
